# technical-interview

./: INTERVIEWER_README.md  README.md
subscription/: .env  Cargo.toml  build.rs  interview.db
subscription/.sqlx/: query-18b6cdeeefec0609778c1fc19612d193fcae97d263124cea8a5a0d6ae5536e10.json  query-34b9d22a463945a061dc42eaa3189f986c0a29658bc25917f62264c93029b4e2.json  query-47f8d6ff7e81e767ae123051b9076ec7ddb36a1b7257196f9048f1401fe2f7a1.json  query-5c8e13da289262abe72d24c5bacb39e689fb0e5edd55b5f6541e43424d9db855.json  query-77276ba4ed922d52e742c2f58d96ce1ebe7c1e55f24b70c9714a237c09d0c67d.json  query-81fd8b74cefd042d5f4bd1dbda89b1567804cbe19bc12406a879bb43b019395f.json  query-9d96e2a79ef05d7dde6034ea1af896e1ab1e3f963061a60afaffe82e0f06b449.json  query-bc89186e14a3432314678d0fbeb5e5b1e0060f68ed5e9cd3e12298b2f0d2bfdc.json  query-c8fc93defd610a72b58dbabe8d51b2d820bc869d194ff16707e87a23260f3ef7.json  query-f7693cfb59289d969546c2c1dbf4b102f1976c2fa29c108149c9053e3eedf35f.json
subscription/proto/: api.proto
subscription/src/: lib.rs  main.rs
subscription/src/handlers/: api.rs
subscription/tests/: assignment.rs
