[package]
name = "subscription-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.12", features = ["codegen", "prost"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tonic-reflection = "0.12"
prost-types = "0.13"
tower = { version = "0.5.1" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "bigdecimal"] }
tracing = "0.1.41"
uuid = { version = "1.3.0", features = ["v4"] }
anyhow = "1.0.94"
serde = "1.0.215"


[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
